--- a/LaserGRBL/RasterConverter/ConvertSizeAndOptionForm.zh-TW.resx
+++ b/LaserGRBL/RasterConverter/ConvertSizeAndOptionForm.zh-TW.resx
@@ -139,7 +139,7 @@
   <data name="BtnDPI.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAACAAAAAQCAYAAAB3AH1ZAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAO
-        wAAADsABataJCQAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASXSURBVEhLrZVt
+        vwAADr8BOAVTJAAAABl0RVh0U29mdHdhcmUAd3d3Lmlua3NjYXBlLm9yZ5vuPBoAAASXSURBVEhLrZVt
         UFRVGMd32ru7OjXT1JTThyKEWt6SonQIhxBaZF/u7rKAu8suyJu7oEOCu7wvlEGgfig1m/rQZB9smsk+
         WAwY4O4qllOSJVmZJKI5pGIBM8UM8v7vnHPvcjeyb56Z/9zzPPec8/zuOc95rkxm7DPJ+MCkzBC8c+8V
         +H/xgQkZ7+dltKPIvwhl4RUot16Dsug6lMWjUJbcILoFVekY0W2oyv4QRfrEVhK/suQmGUvG0fF03tar
@@ -253,10 +253,10 @@
 </value>
   </data>
   <data name="BtnOnOffInfo.ToolTip" xml:space="preserve">
-    <value>Laser ON：M3是標準模式。
-Grbl v1.1版本 支持新的 M4“動態激光功率模式”
+    <value>激光打開：M3是標準模式。
+Grbl v1.1版本支持新的 M4“動態激光功率模式”(需更新韌體V1.1)
+需要有"M4"模式，要在主選單Grbl&gt;&gt; Grbl 韌體參數&gt;&gt;設定$ 32 = 1
 激光關閉：僅支持M5命令。
-"M4"需要在主選單Grbl&gt;&gt; Grbl 韌體參數&gt;&gt;設定$ 32 = 1
 點擊這裡查看更多信息...</value>
   </data>
   <data name="CBLaserON.Location" type="System.Drawing.Point, System.Drawing">
